--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node app.js"
     },
     "keywords": [],
-    "author": "",
+    "author": "Rizky",
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
