--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express": "^5.1.0",
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
-        "sequelize": "^6.37.7"
+        "sequelize": "^6.37.7",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.10",
