--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
         "sequelize": "^6.37.7",
-        "mysql": "^2.18.1"
+        "mysql2": "^3.3.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10",
