--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "type": "commonjs",
     "dependencies": {
         "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
-        "sequelize": "^6.37.7",
-        "mysql2": "^3.3.0"
+        "mysql2": "^3.3.0",
+        "sequelize": "^6.37.7"
     },
     "devDependencies": {
         "nodemon": "^3.1.10",
