--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,16 @@
 {
     "version": 2,
-    "builds": [
+    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+    "rewrites": [{ "source": "/(.*)", "destination": "app.js" }],
+    "headers": [
         {
-            "src": "./app.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "./app.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
+            "source": "/api/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "https://fe-finport.vercel.app" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+                { "key": "Access-Control-Allow-Credentials", "value": "true" }
+            ]
         }
     ]
 }
