--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
     "version": 2,
-    "builds": [{ "src": "app.js", "use": "@vercel/node" }],
-    "rewrites": [{ "source": "/(.*)", "destination": "app.js" }],
-    "headers": [
+    "builds": [
         {
-            "source": "/api/(.*)",
-            "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "https://fe-finport.vercel.app" },
-                { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-                { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-                { "key": "Access-Control-Allow-Credentials", "value": "true" }
-            ]
+            "src": "app.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+            }
         }
     ]
 }
